squash bugs

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a:hover {
 	margin-right: auto;
 }
 
-img {
+.video-img {
 	width:25%;
 	height: auto;
 	padding-right: 2em;
